# rift

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
include/: rift.hpp
include/rift/: config.hpp  lexer.hpp  parser.hpp  result.hpp  script.hpp  token.hpp  util.hpp  value.hpp  visitor.hpp
include/rift/errors/: compile.hpp  runtime.hpp
include/rift/nodes/: accessor.hpp  binary.hpp  binaryop.hpp  call.hpp  execute.hpp  functioncall.hpp  identifier.hpp  indexer.hpp  node.hpp  root.hpp  segment.hpp  ternary.hpp  unary.hpp  unaryop.hpp  value.hpp
src/: config.cpp  lexer.cpp  parser.cpp  rift.cpp  script.cpp  value.cpp  visitor.cpp
src/nodes/: binaryop.cpp  execute.cpp  functioncall.cpp  identifier.cpp  root.cpp  segment.cpp  ternary.cpp  unaryop.cpp  value.cpp
test/: main.cpp
